--- a/src/pages/option-list-modal/option-list-modal.scss
+++ b/src/pages/option-list-modal/option-list-modal.scss
@@ -1,31 +1,1 @@
-page-option-list-modal {
-  //   ion-modal,
-  //   .show-page {
-  //     // transparent black background overlay
-  //     background-color: rgba(0, 0, 0, 0.5) !important;
-  //     padding: 50px !important;
-  //   }
-  //   .toolbar-background {
-  //     color: red !important;
-  //   }
-  //   ion-modal.modal-wrapper {
-  //     transform: translateY(30%) !important;
-  //   }
-  //   ion-page.modal {
-  //     padding: 30px;
-  //     background: rgba(0, 0, 0, 0.5);
-  //   }
-  //   .modal-backdrop-bg {
-  //     background-color: #000;
-  //     opacity: 0;
-  //   }
-  //   .active .modal-backdrop-bg {
-  //     opacity: 0.5;
-  //   }
-}
-
-ion-modal.inset-modal {
-  background-color: rgba(0, 0, 0, 0.5) !important;
-  transition: opacity 0.25s ease-in-out;
-  padding: 20vh 5vw;
-}
+page-option-list-modal {}
