--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,7 +41,7 @@ $colors: (
   secondary: #5cb85c,
   border-color: #e6e6e7,
   badge-color: #e5e5e5,
-  danger: #f53d3d,
+  danger: #ff6767,
   light: #f4f4f4,
   font-color: #7a7a7a,
   whitecolor: #f4f4f4,
