Apply updated option list modal to fixing app freezing when there is to many options

--- a/src/components/event-input-container/event-input-container.html
+++ b/src/components/event-input-container/event-input-container.html
@@ -1,57 +1,41 @@
-
-
-
-<div >
+<div>
   <div (click)="showTooltips()" class="inputLabel">
     {{ fieldLabelKey }}
     <span *ngIf="mandatory" class="required">&nbsp;*</span>
-    <span *ngIf="dataElement.description">&nbsp;&nbsp;<ion-icon color="icon-color" name="help-circle"></ion-icon></span>
+    <span *ngIf="dataElement.description">&nbsp;&nbsp;
+      <ion-icon color="icon-color" name="help-circle"></ion-icon>
+    </span>
   </div>
   <div *ngIf="dataElement.optionSet" [ngClass]="(dataValuesSavingStatusClass[dataElement.id +'-dataElement'])?dataValuesSavingStatusClass[dataElement.id +'-dataElement']:'input-field-container'">
-    <option-set-input-field (onChange)="updateValue($event)"
-                            [dataElementId]="dataElement.id"
-                            [categoryOptionComboId]="'dataElement'"
-                            [data]="data"
-                            [options]="dataElement.optionSet.options">
+    <option-set-input-field (onChange)="updateValue($event)" [optionListTitle]="fieldLabelKey" [dataElementId]="dataElement.id"
+      [categoryOptionComboId]="'dataElement'" [data]="data" [options]="dataElement.optionSet.options">
     </option-set-input-field>
   </div>
   <div *ngIf="!dataElement.optionSet" [ngClass]="(dataValuesSavingStatusClass[dataElement.id +'-dataElement'])?dataValuesSavingStatusClass[dataElement.id +'-dataElement']:'input-field-container'">
     <div *ngIf="textInputField.indexOf(dataElement.valueType) > -1">
-      <text-input-field (onChange)="updateValue($event)"
-                        [dataElementId]="dataElement.id"
-                        [categoryOptionComboId]="'dataElement'"
-                        [data]="data"
-                        [valueType]="dataElement.valueType">
+      <text-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'"
+        [data]="data" [valueType]="dataElement.valueType">
       </text-input-field>
     </div>
     <div *ngIf="numericalInputField.indexOf(dataElement.valueType) > -1">
-      <numerical-input-field (onChange)="updateValue($event)"
-                             [dataElementId]="dataElement.id"
-                             [categoryOptionComboId]="'dataElement'"
-                             [data]="data"
-                             [valueType]="dataElement.valueType">
+      <numerical-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'"
+        [data]="data" [valueType]="dataElement.valueType">
       </numerical-input-field>
     </div>
 
     <div *ngIf="dataElement.valueType == 'DATE'">
-      <date-input-field (onChange)="updateValue($event)"
-                        [dataElementId]="dataElement.id"
-                        [categoryOptionComboId]="'dataElement'"
-                        [data]="data">
+      <date-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'"
+        [data]="data">
       </date-input-field>
     </div>
     <div *ngIf="dataElement.valueType == 'TRUE_ONLY'">
-      <true-only-input-field (onChange)="updateValue($event)"
-                             [dataElementId]="dataElement.id"
-                             [categoryOptionComboId]="'dataElement'"
-                             [data]="data">
+      <true-only-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'"
+        [data]="data">
       </true-only-input-field>
     </div>
     <div *ngIf="dataElement.valueType == 'BOOLEAN'">
-      <boolean-input-field (onChange)="updateValue($event)"
-                           [dataElementId]="dataElement.id"
-                           [categoryOptionComboId]="'dataElement'"
-                           [data]="data">
+      <boolean-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'"
+        [data]="data">
       </boolean-input-field>
     </div>
 
@@ -62,5 +46,3 @@
     </div>
   </div>
 </div>
-
-
