--- a/src/components/option-set-input-field/option-set-input-field.html
+++ b/src/components/option-set-input-field/option-set-input-field.html
@@ -1,6 +1,12 @@
-<ion-item>
+<!-- <ion-item>
   <ion-label>Touch to select/update</ion-label>
   <ion-select (ionChange)="updateValues()" [(ngModel)]="inputFieldValue"  interface="action-sheet" >
     <ion-option *ngFor="let option of options" value="{{option.code}}">{{option.name}}</ion-option>
   </ion-select>
-</ion-item>
+</ion-item> -->
+<div (click)="openOptionListModal()" padding-left>
+  <ion-item>
+    <span *ngIf="!(inputFieldValue && labelMapper && labelMapper[inputFieldValue])">Touch to select option</span>
+    <span *ngIf="(inputFieldValue && labelMapper && labelMapper[inputFieldValue])"> {{ labelMapper[inputFieldValue] }}</span>
+  </ion-item>
+</div>
