feat(custom data entry): Added default styling on the entry table and its inputs"

--- a/src/pages/data-entry/components/custom-data-entry-form/custom-data-entry-form.scss
+++ b/src/pages/data-entry/components/custom-data-entry-form/custom-data-entry-form.scss
@@ -1,5 +1,22 @@
 custom-data-entry-form {
-  .cutom-entry-form {
+  .custom-entry-form {
     overflow: auto;
+  }
+
+  td {
+    text-align: left;
+    padding-left: 15px;
+  }
+  input, textarea {
+    border: solid thin #dddddd;
+    padding: 5px;
+  }
+
+  textarea {
+    width: 90%;
+  }
+
+  input {
+    text-align: center;
   }
 }
