feat(custom data entry): Added support for option sets
Added support to show option sets as select inputs for data elements with option sets enabled

--- a/src/pages/data-entry/components/custom-data-entry-form/custom-data-entry-form.scss
+++ b/src/pages/data-entry/components/custom-data-entry-form/custom-data-entry-form.scss
@@ -7,13 +7,17 @@ custom-data-entry-form {
     text-align: left;
     padding-left: 15px;
   }
-  input, textarea {
+  input, textarea, select {
     border: solid thin #dddddd;
     padding: 5px;
   }
 
   textarea {
     width: 90%;
+  }
+
+  select {
+    background-color: #ffffff;
   }
 
   input {
